@@ -43,6 +43,7 @@ PlanetsLib.set_default_import_location = planet.set_default_import_location
 
 PlanetsLib.excise_tech_from_tech_tree = technology.excise_tech_from_tech_tree
 PlanetsLib.excise_recipe_from_tech_tree = technology.excise_recipe_from_tech_tree
+PlanetsLib.excise_effect_from_tech_tree = technology.excise_effect_from_tech_tree
 
 --== Undocumented APIs ==--
 -- Though these APIs are undocumented we should still support them, as mods may be using them.
