@@ -2,6 +2,7 @@
 Version: 1.3.2
 Date: ????
   Changes:
+    - New API: excise_effect_from_tech_tree
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.1
 Date: 2025-04-21
